--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
         }
     }
 }
+ext {
+    supportLibVersion = '27.1.0'  // variable that can be referenced to keep support libs consistent
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,4 +37,11 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:percent:${supportLibVersion}"
+    implementation "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
+    implementation "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+    implementation "com.android.support:transition:${supportLibVersion}"
+    implementation "com.android.support:support-annotations:${supportLibVersion}"
 }
