--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity" />
+        <activity android:name=".fragmentholder" />
         <activity android:name=".SignupActivity" />
 
         <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
