--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
     implementation "com.android.support:transition:${supportLibVersion}"
     implementation "com.android.support:support-annotations:${supportLibVersion}"
+    implementation "android.arch.paging:runtime:1.0.0"
 }
