last commit before grid view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
 
         <activity android:name=".TimelineActivity" />
         <activity android:name=".model.DescriptionActivity" />
-        <activity android:name=".model.DetailsActivity"></activity>
+        <activity android:name=".model.DetailsActivity" />
+        <activity android:name=".GridViewActivity"></activity>
     </application>
 
 </manifest>
