--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:design:${supportLibVersion}"
     implementation "com.android.support:percent:${supportLibVersion}"
-    implementation "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
-    implementation "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+    implementation "com.android.support:support-vector-drawable:${supportLibVersion}"
+    // VectorDrawableCompat
+    implementation "com.android.support:animated-vector-drawable:${supportLibVersion}"
+    // AnimatedVectorDrawableCompat
     implementation "com.android.support:transition:${supportLibVersion}"
     implementation "com.android.support:support-annotations:${supportLibVersion}"
     implementation "android.arch.paging:runtime:1.0.0"
